# Ba2-inf2-labo04

./: .gitignore  CMakeLists.txt  README.md  Temps.cpp  Temps.h  labo_04_carvalho_bruno_gallay_david.cpp
.github/workflows/: ccpp.yml
doc/: Doxyfile
src/: Temps.cpp  exceptions.h  temps.h  temps.ipp
